--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hello, Webpack</title>
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css" />
 	</head>
 	<body>
